overlays/uksouth-dev/data/data-dashboard/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: data.${cluster_name}.${location}.bink.sh
  namespace: default
spec:
  rules:
    - host: data-dashboard.${cluster_name}.${location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: data-dashboard
                port:
                  number: 80
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: healthz
                port:
                  number: 80
  tls:
    - hosts:
        - data-dashboard.${cluster_name}.${location}.bink.sh
      secretName: data.${cluster_name}.${location}.bink.sh
